apps/transmission/transmission-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
spec:
  serviceName: transmission
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
        tier: downloader
    spec:
      containers:
        - name: transmission
          image: 127.0.0.1:32000/transmission
          ports:
            - name: transmission
              containerPort: 9091
          volumeMounts:
            - name: transmission
              subPath: downloads
              mountPath: /downloaded
            - name: transmission
              subPath: incomplete
              mountPath: /incomplete
            - name: transmission
              subPath: watchdir
              mountPath: /watch
            - name: transmission
              subPath: config
              mountPath: /config
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "rm -f /downloads/{complete,incomplete}"]
          livenessProbe:
            httpGet:
              path: /transmission/web/
              port: transmission
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /transmission/web/
              port: transmission
              scheme: HTTP
      volumes:
        - name: transmission
          persistentVolumeClaim:
            claimName: transmission
        - name: transmission-config
          configMap:
            name: transmission-config
        - name: transmission-secret
          secret:
            secretName: transmission-secret
