apps/transmission/transmission-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - name: transmission
      port: 9091
      targetPort: 9091
