apps/transmission/transmission-ext-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: transmission-ext
  labels:
    authentified: "true"
    type: external
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - torrent.former-hostname.com
      secretName: transmission.former-hostname.com
  rules:
    - host: torrent.former-hostname.com
      http:
        paths:
          - backend:
              serviceName: transmission
              servicePort: 9091
            path: /
